--- a/edor/pom.xml
+++ b/edor/pom.xml
@@ -12,9 +12,8 @@
     <artifactId>edor</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>edor</name>
-    <description>Demo project for Spring Boot</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>8</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -28,10 +27,10 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- 数据库连接池配置 -->
+        <!-- Mybatis -->
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-starter</artifactId>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
 
         <!-- MySQL -->
