--- a/insure/pom.xml
+++ b/insure/pom.xml
@@ -12,7 +12,6 @@
     <artifactId>insure</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>insure</name>
-    <description>Demo project for Spring Boot</description>
 
 
     <dependencies>
@@ -27,10 +26,10 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- 数据库连接池配置 -->
+        <!-- Mybatis -->
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-starter</artifactId>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
 
         <!-- MySQL -->
