--- a/insure/src/main/resources/application.yml
+++ b/insure/src/main/resources/application.yml
@@ -3,17 +3,19 @@ spring.application.name: insure
 # 连接数据库的配置信息
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/insurance?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/insurance_dev?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
     password: root
-    type: com.alibaba.druid.pool.DruidDataSource
-    druid:
-      initial-size: 10
-      max-active: 2000
-      min-idle: 10
-      time-between-eviction-runs-millis: 1800000
-      min-evictable-idle-time-millis: 1800000
-      validation-query: SELECT 1
-      test-while-idle: true
-      test-on-borrow: false
-      test-on-return: false
+#    type: com.alibaba.druid.pool.DruidDataSource
+#    druid:
+#      initial-size: 10
+#      max-active: 2000
+#      min-idle: 10
+#      time-between-eviction-runs-millis: 1800000
+#      min-evictable-idle-time-millis: 1800000
+#      validation-query: SELECT 1
+#      test-while-idle: true
+#      test-on-borrow: false
+#      test-on-return: false
+server:
+  port: 8081
