--- a/edor/src/main/resources/application.yml
+++ b/edor/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring.application.name: edor
 server:
   port: 8080
 
-# Á¬½ÓÊı¾İ¿âµÄÅäÖÃĞÅÏ¢
+#æ•°æ®è¿æ¥æ± é…ç½®
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/insurance_dev?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
@@ -21,5 +21,10 @@ spring:
       test-on-borrow: false
       test-on-return: false
 
+#mybatisæ–‡ä»¶è®¿é—®è·¯å¾„
 mybatis:
   mapper-locations: classpath:mapper/*.xml
+
+#swaggeræ§åˆ¶å¼€å…³
+swagger2:
+    enable: true
