14、通过Spring Validation检查数据的有效性

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -17,6 +17,12 @@
     </properties>
     <dependencies>
 
+        <!-- Spring Validation校验数据有效性 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
         <!-- Lombok：通过注解简化开发 -->
         <dependency>
             <groupId>org.projectlombok</groupId>
