--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
                 <version>${spring-boot.version}</version>
             </dependency>
 
+            <!-- Spring Validation校验数据有效性 -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-validation</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+
             <!-- swagger依赖 -->
             <dependency>
                 <groupId>io.springfox</groupId>
