15、使用nacos实现服务注册

--- a/edor/pom.xml
+++ b/edor/pom.xml
@@ -27,6 +27,16 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- nacos -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+
         <!-- Spring Validation校验数据有效性 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
