--- a/edor/src/main/resources/application.yml
+++ b/edor/src/main/resources/application.yml
@@ -1,44 +1,31 @@
-spring.application.name: insurance-edor
-
-server:
-  port: 8080
-
-#数据库连接池配置
-spring:
-  cloud:
-    nacos:
-      server-addr: localhost:8848
-      config:
-        group: insurance_group
-        namespace: insurance
-      core:
-        member:
-          lookup:
-            type: file
-  # SpringCloud 2021版本之后，需要用以下方式导入nacos的配置文件
-  config:
-    import: nacos:bootstrap.yml
-  datasource:
-    url: jdbc:mysql://localhost:3306/insurance_dev?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-    username: root
-    password: root
-    type: com.alibaba.druid.pool.DruidDataSource
-    druid:
-      initial-size: 10
-      max-active: 2000
-      min-idle: 10
-      time-between-eviction-runs-millis: 1800000
-      min-evictable-idle-time-millis: 1800000
-      validation-query: SELECT 1
-      test-while-idle: true
-      test-on-borrow: false
-      test-on-return: false
-
-
-#mybatis文件访问路径
-mybatis:
-  mapper-locations: classpath:mapper/*.xml
-
-#swagger控制开关
-swagger2:
-    enable: true
+#spring.application.name: insurance-edor
+#
+#server:
+#  port: 8080
+#
+##数据库连接池配置
+#spring:
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/insurance_dev?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+#    username: root
+#    password: root
+#    type: com.alibaba.druid.pool.DruidDataSource
+#    druid:
+#      initial-size: 10
+#      max-active: 2000
+#      min-idle: 10
+#      time-between-eviction-runs-millis: 1800000
+#      min-evictable-idle-time-millis: 1800000
+#      validation-query: SELECT 1
+#      test-while-idle: true
+#      test-on-borrow: false
+#      test-on-return: false
+#
+#
+##mybatis文件访问路径
+#mybatis:
+#  mapper-locations: classpath:mapper/*.xml
+#
+##swagger控制开关
+#swagger2:
+#    enable: true
