--- a/edor/src/main/resources/bootstrap.yml
+++ b/edor/src/main/resources/bootstrap.yml
@@ -17,13 +17,13 @@ spring:
         # 作为配置中心的nacos服务器地址，默认值：${spring.cloud.nacos:server-addr}
         server-addr: localhost:8848
         # 配置文件读取的nacos命名空间ID，默认值：public
-        namespace: insurance
+        namespace: cc220d81-33f8-48d6-8566-01958e868bfd
         # 配置文件在nacos命名空间中的分组，默认值：DEFAULT_GROUP
-        group: insurance_group
+        group: INSURANCE_GROUP
         # 配置文件的文件前缀（配置文件名称），默认值：${spring.application.name}
         prefix: ${spring.application.name}
         # 配置文件的文件后缀（文件类型），默认值：properties
-        file-extension: yml
+        file-extension: yaml
         # 配置内容的编码方式，默认值：UTF-8
         encode: UTF-8
         # 获取配置的超时时间，单位：ms，默认值：3000
@@ -35,19 +35,19 @@ spring:
         # SecretKey
         #secret-key: 123
         # 引入共享配置（同一分组）
-#        shared-configs:
-#          # 配置支持共享的 Data Id
-#          - data-id: comm.properties
-#            # 配置 Data Id 所在分组，缺省默认 DEFAULT_GROUP
-#            group: insurance_group
-#            # 配置Data Id 在配置变更时，是否动态刷新，缺省默认 false
-#            refresh: true
-#        # 引入扩展配置（同一分组或不同分组）
+        shared-configs:
+          # 配置支持共享的 Data Id
+          - data-id: insurance_edor.yaml
+            # 配置 Data Id 所在分组，缺省默认 DEFAULT_GROUP
+            group: INSURANCE_GROUP
+            # 配置Data Id 在配置变更时，是否动态刷新，缺省默认 false
+            refresh: true
+        # 引入扩展配置（同一分组或不同分组）
 #        extension-configs:
 #          # 配置支持共享的 Data Id
-#          - data-id: comm.properties
+#          - data-id: insurance_edor
 #            # 配置 Data Id 所在分组，缺省默认 DEFAULT_GROUP
-#            group: DEFAULT_GROUP
+#            group: insurance_group
 #            # 配置Data Id 在配置变更时，是否动态刷新，缺省默认 false
 #            refresh: true
       # nacos注册中心相关
@@ -57,4 +57,4 @@ spring:
         # 作为注册中心的nacos服务器地址，默认值：${spring.cloud.nacos:server-addr}
         server-addr: localhost:8848
         # 服务注册在nacso上的命名空间ID，默认值：public
-        namespace: insurance
+        namespace: cc220d81-33f8-48d6-8566-01958e868bfd
