--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <swagger.version>3.0.0</swagger.version>
         <alibaba-cloud.version>2021.0.4.0</alibaba-cloud.version>
         <spring-cloud.version>2021.0.9</spring-cloud.version>
+        <bootstrap.version>3.1.3</bootstrap.version>
     </properties>
 
     <dependencyManagement>
@@ -51,6 +52,13 @@
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <!-- 引入bootstrap依赖，否则nacos不生效 -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-bootstrap</artifactId>
+                <version>${bootstrap.version}</version>
             </dependency>
 
             <!-- nacos -->
