--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
 
     <properties>
         <java.version>8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring-boot.version>2.6.15</spring-boot.version>
         <druid.version>1.2.14</druid.version>
         <mysql.version>8.0.21</mysql.version>
@@ -28,6 +30,7 @@
         <alibaba-cloud.version>2021.0.4.0</alibaba-cloud.version>
         <spring-cloud.version>2021.0.9</spring-cloud.version>
         <bootstrap.version>3.1.3</bootstrap.version>
+        <gateway.version>3.1.9</gateway.version>
     </properties>
 
     <dependencyManagement>
@@ -43,6 +46,13 @@
                 <artifactId>spring-boot-starter-test</artifactId>
                 <scope>test</scope>
                 <version>${spring-boot.version}</version>
+            </dependency>
+
+            <!-- 引入网关gateway依赖 -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-gateway</artifactId>
+                <version>${gateway.version}</version>
             </dependency>
 
             <!-- Spring Cloud 家族 -->
