--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
                 <version>${spring-boot.version}</version>
             </dependency>
 
+            <!-- spring security 安全框架 -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-security</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+
             <!-- 引入网关gateway依赖 -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
