20、先取消security，最后功能实现后再集成该功能

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -20,9 +20,9 @@ spring:
       test-while-idle: true
       test-on-borrow: false
       test-on-return: false
-  main:
-    web-application-type: reactive
-    allow-bean-definition-overriding: true
+#  main:
+#    web-application-type: reactive
+#    allow-bean-definition-overriding: true
   cloud:
     gateway:
       discovery:
