--- a/common/pom.xml
+++ b/common/pom.xml
@@ -18,10 +18,10 @@
     <dependencies>
 
         <!-- spring security 安全框架 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--        </dependency>-->
 
         <!-- Spring Validation校验数据有效性 -->
         <dependency>
