--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -26,10 +26,10 @@
         </dependency>
 
         <!-- spring security 安全框架 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--        </dependency>-->
 
         <!-- web：允许项目启动在Tomcat -->
 <!--        <dependency>-->
@@ -37,12 +37,12 @@
 <!--            <artifactId>spring-boot-starter-web</artifactId>-->
 <!--            <version>${spring-boot.version}</version>-->
 <!--        </dependency>-->
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
-            <scope>provided</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>javax.servlet</groupId>-->
+<!--            <artifactId>javax.servlet-api</artifactId>-->
+<!--            <version>4.0.1</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
 
         <!-- 引入网关gateway依赖 -->
         <dependency>
