22、新增过滤器，过滤静态变量等路径，可以不走权限认证，新增跨域设置，尚未解决swaager-ui不能访问的问题

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -23,6 +23,13 @@
 <!--            <artifactId>spring-boot-starter-security</artifactId>-->
 <!--        </dependency>-->
 
+        <!-- web：允许项目启动在Tomcat -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+
         <!-- Spring Validation校验数据有效性 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
