--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <spring-cloud.version>2021.0.9</spring-cloud.version>
         <bootstrap.version>3.1.3</bootstrap.version>
         <gateway.version>3.1.9</gateway.version>
+        <fastjson.version>1.2.83</fastjson.version>
     </properties>
 
     <dependencyManagement>
@@ -55,16 +56,23 @@
 <!--                <version>${spring-boot.version}</version>-->
 <!--            </dependency>-->
 
+            <!-- 引入fastjson依赖 -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+            </dependency>
+
             <!-- 引入网关gateway依赖 -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-gateway</artifactId>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.springframework.boot</groupId>
-                        <artifactId>spring-boot-starter-web</artifactId>
-                    </exclusion>
-                </exclusions>
+<!--                <exclusions>-->
+<!--                    <exclusion>-->
+<!--                        <groupId>org.springframework.boot</groupId>-->
+<!--                        <artifactId>spring-boot-starter-web</artifactId>-->
+<!--                    </exclusion>-->
+<!--                </exclusions>-->
                 <version>${gateway.version}</version>
             </dependency>
 
