--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -44,6 +44,12 @@
 <!--            <scope>provided</scope>-->
 <!--        </dependency>-->
 
+        <!-- 引入Redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
         <!-- 引入fastjson依赖 -->
         <dependency>
             <groupId>com.alibaba</groupId>
