--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -23,6 +23,19 @@ spring:
 #  main:
 #    web-application-type: reactive
 #    allow-bean-definition-overriding: true
+  #整合Redis  选择JRedis
+  redis:
+    database: 0   #数据库索引
+    host: localhost  #Redis服务器地址
+    port: 6379  #Redis服务器端口
+    password: '' #Redis服务器密码 默认为空
+    jedis:
+      pool:
+        max-active: 1024  #连接池最大连接数（负值表示没有限制）
+        max-wait: 10000  #连接池最大阻塞等待时间（负值表示没有限制）
+        max-idle: 200  #连接池最大空闲连接
+        min-idle: 0  #连接池最小空闲连接
+    timeout: 10000  #连接超时时间
   cloud:
     gateway:
       discovery:
