--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,13 @@
 <!--                <version>${spring-boot.version}</version>-->
 <!--            </dependency>-->
 
+            <!-- 引入Redis -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+
             <!-- 引入fastjson依赖 -->
             <dependency>
                 <groupId>com.alibaba</groupId>
