--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -44,6 +44,16 @@
 <!--            <scope>provided</scope>-->
 <!--        </dependency>-->
 
+        <!-- 引入redisson -->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+
         <!-- 引入Redis -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
