--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
         <bootstrap.version>3.1.3</bootstrap.version>
         <gateway.version>3.1.9</gateway.version>
         <fastjson.version>1.2.83</fastjson.version>
+        <redisson.version>3.17.7</redisson.version>
+        <commons-pool2.version>2.11.1</commons-pool2.version>
     </properties>
 
     <dependencyManagement>
@@ -55,6 +57,18 @@
 <!--                <artifactId>spring-boot-starter-security</artifactId>-->
 <!--                <version>${spring-boot.version}</version>-->
 <!--            </dependency>-->
+
+            <!-- 引入redisson -->
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson-spring-boot-starter</artifactId>
+                <version>${redisson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-pool2</artifactId>
+                <version>${commons-pool2.version}</version>
+            </dependency>
 
             <!-- 引入Redis -->
             <dependency>
