--- a/insure/src/main/resources/application.yml
+++ b/insure/src/main/resources/application.yml
@@ -1,14 +1,14 @@
-spring.application.name: insurance-insure
-
-server:
-  port: 8081
-
-#数据库连接池配置
-spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/insurance_dev?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-    username: root
-    password: root
+#spring.application.name: insurance-insure
+#
+#server:
+#  port: 8081
+#
+##数据库连接池配置
+#spring:
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/insurance_dev?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+#    username: root
+#    password: root
 #    type: com.alibaba.druid.pool.DruidDataSource
 #    druid:
 #      initial-size: 10
@@ -20,3 +20,13 @@ spring:
 #      test-while-idle: true
 #      test-on-borrow: false
 #      test-on-return: false
+#
+#
+##mybatis文件访问路径
+#mybatis:
+#  mapper-locations: classpath:mapper/*.xml
+#
+##swagger控制开关
+#swagger2:
+#    enable: true
+#
