--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -82,6 +82,12 @@
             <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
 
+        <!-- 引入loadbalancer依赖 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
+
         <!-- 引入bootstrap依赖，否则nacos不生效 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
