--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -46,25 +46,35 @@ spring:
           '[/**]': # 这里的'/**'表示对所有路由生效，可以根据需要调整为特定路径
             allowedOrigins: "*" # 允许所有的源地址，也可以指定具体的域名
             allowedMethods: # 允许的 HTTP 方法类型
-              - GET
-              - POST
-              - PUT
-              - DELETE
-              - OPTIONS
-            allowedHeaders: "*" # 允许所有的请求头，也可以指定具体的请求头
-            allowCredentials: true # 是否允许携带凭证（cookies）
+              - "GET"
+              - "POST"
+              - "PUT"
+              - "DELETE"
+              - "OPTIONS"
+#            allowedHeaders: "*" # 允许所有的请求头，也可以指定具体的请求头
+#            allowCredentials: true # 是否允许携带凭证（cookies）
             maxAge: 3600 # CORS预检请求的有效期（秒）
       routes:
-        - id: insurance-edor #payment_route    #路由的ID，没有固定规则但要求唯一，建议配合服务名
-          #          uri: http://localhost:8001          #匹配后提供服务的路由地址
+        - id: edor    #路由的ID，没有固定规则但要求唯一，建议配合服务名
+#          uri: http://localhost:8080          #匹配后提供服务的路由地址
           uri: lb://insurance-edor #匹配后提供服务的路由地址
           predicates:
-            - Path=/**         # 断言，路径相匹配的进行路由
-        - id: insurance-insure #payment_route    #路由的ID，没有固定规则但要求唯一，建议配合服务名
-          #          uri: http://localhost:8001          #匹配后提供服务的路由地址
-          uri: lb://insurance-insure #匹配后提供服务的路由地址
+            - Path=/api-edor/**         # 断言，路径相匹配的进行路由
+          order: 1
+          filters:
+#            - AddRequestHeader=from, gateway
+            - StripPrefix=1
+            - RewritePath=/api-edor/?(?<segment>.*), /$\{segment}
+        - id: insure     #路由的ID，没有固定规则但要求唯一，建议配合服务名
+#          uri: http://localhost:8081          #匹配后提供服务的路由地址
+          uri: lb://insurance-insure     #匹配后提供服务的路由地址
           predicates:
-            - Path=/**         # 断言，路径相匹配的进行路由
+            - Path=/api-insure/**         # 断言，路径相匹配的进行路由 (不同的id断言路径不可以一样)
+          order: 2
+          filters:
+#            - AddRequestHeader=from, gateway
+            - StripPrefix=1
+            - RewritePath=/api-insure/?(?<segment>.*), /$\{segment}
             # - After=2020-11-20T17:07:24.352+08:00[Asia/Shanghai]
             #            - Cookie=username,longy
             # - Before=2020-11-20T17:11:24.352+08:00[Asia/Shanghai]
