--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <redisson.version>3.17.7</redisson.version>
         <commons-pool2.version>2.11.1</commons-pool2.version>
         <javax.version>4.0.1</javax.version>
+        <loadblancer.version>3.1.3</loadblancer.version>
     </properties>
 
     <dependencyManagement>
@@ -91,6 +92,14 @@
                 <artifactId>spring-cloud-starter-gateway</artifactId>
                 <version>${gateway.version}</version>
             </dependency>
+
+            <!-- 引入loadbalancer依赖 -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+                <version>${loadblancer.version}</version>
+            </dependency>
+
 
             <!-- Spring Cloud 家族 -->
             <dependency>
