--- a/insure/src/main/resources/application.yml
+++ b/insure/src/main/resources/application.yml
@@ -1,32 +1,36 @@
-#spring.application.name: insurance-insure
-#
-#server:
-#  port: 8081
-#
-##数据库连接池配置
-#spring:
-#  datasource:
-#    url: jdbc:mysql://localhost:3306/insurance_dev?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-#    username: root
-#    password: root
-#    type: com.alibaba.druid.pool.DruidDataSource
-#    druid:
-#      initial-size: 10
-#      max-active: 2000
-#      min-idle: 10
-#      time-between-eviction-runs-millis: 1800000
-#      min-evictable-idle-time-millis: 1800000
-#      validation-query: SELECT 1
-#      test-while-idle: true
-#      test-on-borrow: false
-#      test-on-return: false
-#
-#
-##mybatis文件访问路径
-#mybatis:
-#  mapper-locations: classpath:mapper/*.xml
-#
-##swagger控制开关
-#swagger2:
-#    enable: true
-#
+spring.application.name: insurance-insure
+
+server:
+  port: 8081
+
+#数据库连接池配置
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/insurance_dev?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    username: root
+    password: root
+    type: com.alibaba.druid.pool.DruidDataSource
+    druid:
+      initial-size: 10
+      max-active: 2000
+      min-idle: 10
+      time-between-eviction-runs-millis: 1800000
+      min-evictable-idle-time-millis: 1800000
+      validation-query: SELECT 1
+      test-while-idle: true
+      test-on-borrow: false
+      test-on-return: false
+
+
+#mybatis文件访问路径
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+
+#swagger控制开关
+swagger2:
+    enable: true
+
+#配置日志级别
+logging:
+  level:
+    cn.com.insure: debug
