--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,8 @@
         <redisson.version>3.17.7</redisson.version>
         <commons-pool2.version>2.11.1</commons-pool2.version>
         <javax.version>4.0.1</javax.version>
-        <loadblancer.version>3.1.3</loadblancer.version>
+        <loadbalancer.version>3.1.3</loadbalancer.version>
+        <openFeign.version>3.1.3</openFeign.version>
     </properties>
 
     <dependencyManagement>
@@ -72,6 +73,13 @@
 <!--                <version>${commons-pool2.version}</version>-->
 <!--            </dependency>-->
 
+            <!--Open Feign依赖-->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-openfeign</artifactId>
+                <version>${openFeign.version}</version>
+            </dependency>
+
             <!-- 引入Redis -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -97,9 +105,8 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-loadbalancer</artifactId>
-                <version>${loadblancer.version}</version>
+                <version>${loadbalancer.version}</version>
             </dependency>
-
 
             <!-- Spring Cloud 家族 -->
             <dependency>
