30、集成Sentinel实现服务降级以及熔断（多个微服务可以共同集成在一个上）  依赖整理  打包问题未解决

--- a/edor/src/main/resources/application.yml
+++ b/edor/src/main/resources/application.yml
@@ -20,6 +20,9 @@ spring:
       test-while-idle: true
       test-on-borrow: false
       test-on-return: false
+    sentinel:
+      transport:
+        dashboard: 82.156.133.176:8080 #远程sentinel控制
 
 
 #mybatis文件访问路径
