--- a/common/pom.xml
+++ b/common/pom.xml
@@ -6,7 +6,6 @@
         <groupId>cn.com</groupId>
         <artifactId>insurance</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>cn.com</groupId>
     <artifactId>common</artifactId>
@@ -15,6 +14,9 @@
     <properties>
         <java.version>8</java.version>
     </properties>
+
+    <packaging>pom</packaging>
+
     <dependencies>
 
         <!-- spring security 安全框架 -->
@@ -58,10 +60,13 @@
     </dependencies>
 
     <build>
+        <finalName>${project.artifactId}</finalName>
+        <defaultGoal>compile</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.6.15</version>
             </plugin>
         </plugins>
     </build>
