--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
 
     <packaging>pom</packaging>
 
+    <modules>
+        <module>common</module>
+        <module>edor</module>
+        <module>insure</module>
+    </modules>
+
     <properties>
         <java.version>8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -27,16 +33,11 @@
         <lombok.version>1.18.28</lombok.version>
         <common.version>0.0.1-SNAPSHOT</common.version>
         <swagger.version>3.0.0</swagger.version>
-        <alibaba-cloud.version>2021.0.4.0</alibaba-cloud.version>
         <spring-cloud.version>2021.0.9</spring-cloud.version>
-        <bootstrap.version>3.1.3</bootstrap.version>
-        <gateway.version>3.1.9</gateway.version>
         <fastjson.version>1.2.83</fastjson.version>
-        <redisson.version>3.17.7</redisson.version>
         <commons-pool2.version>2.11.1</commons-pool2.version>
         <javax.version>4.0.1</javax.version>
-        <loadbalancer.version>3.1.3</loadbalancer.version>
-        <openFeign.version>3.1.3</openFeign.version>
+        <alibaba.version>2021.0.4.0</alibaba.version>
     </properties>
 
     <dependencyManagement>
@@ -54,58 +55,13 @@
                 <version>${spring-boot.version}</version>
             </dependency>
 
-            <!-- spring security 安全框架 -->
-<!--            <dependency>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-starter-security</artifactId>-->
-<!--                <version>${spring-boot.version}</version>-->
-<!--            </dependency>-->
-
-            <!-- 引入redisson -->
-<!--            <dependency>-->
-<!--                <groupId>org.redisson</groupId>-->
-<!--                <artifactId>redisson-spring-boot-starter</artifactId>-->
-<!--                <version>${redisson.version}</version>-->
-<!--            </dependency>-->
-<!--            <dependency>-->
-<!--                <groupId>org.apache.commons</groupId>-->
-<!--                <artifactId>commons-pool2</artifactId>-->
-<!--                <version>${commons-pool2.version}</version>-->
-<!--            </dependency>-->
-
-            <!--Open Feign依赖-->
+            <!-- Spring Cloud Alibaba 家族 -->
             <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-openfeign</artifactId>
-                <version>${openFeign.version}</version>
-            </dependency>
-
-            <!-- 引入Redis -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-data-redis</artifactId>
-                <version>${spring-boot.version}</version>
-            </dependency>
-
-            <!-- 引入fastjson依赖 -->
-            <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>fastjson</artifactId>
-                <version>${fastjson.version}</version>
-            </dependency>
-
-            <!-- 引入网关gateway依赖 -->
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-gateway</artifactId>
-                <version>${gateway.version}</version>
-            </dependency>
-
-            <!-- 引入loadbalancer依赖 -->
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-loadbalancer</artifactId>
-                <version>${loadbalancer.version}</version>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${alibaba.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
 
             <!-- Spring Cloud 家族 -->
@@ -117,30 +73,17 @@
                 <scope>import</scope>
             </dependency>
 
-            <!-- 引入bootstrap依赖，否则nacos不生效 -->
             <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-bootstrap</artifactId>
-                <version>${bootstrap.version}</version>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-pool2</artifactId>
+                <version>${commons-pool2.version}</version>
             </dependency>
 
-            <!-- nacos -->
+            <!-- 引入fastjson依赖 -->
             <dependency>
-                <groupId>com.alibaba.cloud</groupId>
-                <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-                <version>${alibaba-cloud.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.alibaba.cloud</groupId>
-                <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-                <version>${alibaba-cloud.version}</version>
-            </dependency>
-
-            <!-- Spring Validation校验数据有效性 -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-validation</artifactId>
-                <version>${spring-boot.version}</version>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
             </dependency>
 
             <!-- swagger依赖 -->
@@ -158,13 +101,6 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger-ui</artifactId>
                 <version>${swagger.version}</version>
-            </dependency>
-
-            <!-- web：允许项目启动在Tomcat -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-web</artifactId>
-                <version>${spring-boot.version}</version>
             </dependency>
 
             <!-- 导入javax依赖 -->
@@ -194,13 +130,6 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-extension</artifactId>
                 <version>${mybatis-plus.version}</version>
-            </dependency>
-
-            <!-- SpringBoot FreeMarker：用于代码生成器 -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-freemarker</artifactId>
-                <version>${spring-boot.version}</version>
             </dependency>
 
             <!-- Lombok：通过注解简化开发 -->
@@ -241,50 +170,5 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-    <repositories>
-        <repository>
-            <id>spring-milestones</id>
-            <name>Spring Milestones</name>
-            <url>https://repo.spring.io/milestone</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>spring-snapshots</id>
-            <name>Spring Snapshots</name>
-            <url>https://repo.spring.io/snapshot</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>spring-milestones</id>
-            <name>Spring Milestones</name>
-            <url>https://repo.spring.io/milestone</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-        <pluginRepository>
-            <id>spring-snapshots</id>
-            <name>Spring Snapshots</name>
-            <url>https://repo.spring.io/snapshot</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-        </pluginRepository>
-    </pluginRepositories>
 
 </project>
